--- a/news.html
+++ b/news.html
@@ -16,6 +16,7 @@ body {
 <!-- Note: Java's web renderer is pretty bad so you cannot get too fancy -->
 <h1>News</h1>
 <p>Moved To MCUpdate! Now You Can update when one comes out.</p>
-<p>Speaking of which Added The Dalek Mod, for Tardises of course.</p>
+<p>5/7- Speaking of which Added The Dalek Mod, for Tardises of course.</p>
+<p>5/8 Added random tweaks and updated foamfix</p>
 </body>
 </html>
