--- a/news.html
+++ b/news.html
@@ -17,6 +17,6 @@ body {
 <h1>News</h1>
 <p>Moved To MCUpdate! Now You Can update when one comes out.</p>
 <p>5/7- Speaking of which Added The Dalek Mod, for Tardises of course.</p>
-<p>5/8 Added random tweaks and updated foamfix</p>
+<p>5/8 Added random tweaks, Chance cubes ;) and world edit and updated foamfix</p>
 </body>
 </html>
