--- a/news.html
+++ b/news.html
@@ -21,6 +21,6 @@ body {
 <p>5/8 Sorry about the fog if you can't handle it install optifine here:<a href>http://adf.ly/404181/optifine.net/adloadx?f=OptiFine_1.12.2_HD_U_D2.jar</a> We can't include it because of licensing issues. #blame sp614x</p>
 <p>5/9 Created custom Background! Rejoice!</p>
 <p>5/11 added better questing and random patches.</p>
-<p>5/12 removed quark becuase it was breaking things.</p>
+<p>5/12 removed quark becuase it was breaking things. Also added ICBM! ;)</p>
 </body>
 </html>
