--- a/news.html
+++ b/news.html
@@ -22,5 +22,6 @@ body {
 <p>5/9 Created custom Background! Rejoice!</p>
 <p>5/11 added better questing and random patches.</p>
 <p>5/12 removed quark becuase it was breaking things. Also added ICBM! ;)</p>
+<p>5/13 Added computercraft.</p>
 </body>
 </html>
