Added twilight forest

--- a/news.html
+++ b/news.html
@@ -23,5 +23,6 @@ body {
 <p>5/11 added better questing and random patches.</p>
 <p>5/12 removed quark becuase it was breaking things. Also added ICBM! ;)</p>
 <p>5/13 Added computercraft.</p>
+<p>6/22 Added twilight forest.</p>
 </body>
 </html>
